--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -47,6 +47,18 @@ h6 {
   overflow-wrap: break-word;
 }
 
+.sr-only {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  white-space: nowrap;
+  border: 0;
+}
+
 /* Tailwind */
 @tailwind base;
 @tailwind components;
